--- a/styles.css
+++ b/styles.css
@@ -2,30 +2,34 @@
   margin: 0;
 }
 
-.banner {
+#div1 {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   position: fixed;
+  top: 0;
   background-color: rgb(255, 74, 74);
   width: 100%;
   height: 8rem;
   margin: 0;
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.376);
-
   z-index: 900000;
 }
 
-.banner {
+.banner:first-child {
   color: white;
   font-family: "Arial";
   font-size: 1rem;
+  margin-bottom: 1rem;
 }
 
 button {
+  margin-top: 1rem;
   display: block !important;
   height: 2rem;
   width: 5rem;
   border-radius: 15px;
   border: none;
+  cursor: pointer;
 }
